# libpd_test

./: .gitignore  CMakeLists.txt  README.md  stereo.json
core/: core.cpp  core.h  main.cpp
johnson/: johnson.cpp  johnson.h  main.cpp
pd/: ff.pd  test.pd
src/: Delay.cpp  Delay.h  loop.cpp
stereo/: main.cpp  stereo.cpp
